# c-homework5

./: CMakeLists.txt  creategraph.cpp  creategraph.h  deletegraph.cpp  deletegraph.h  document.h  editor.cpp  editor.h  export.cpp  export.h  import.cpp  import.h  interface.cpp  interface.h  lib.cpp  main.cpp  primitive.h  startnew.cpp  startnew.h
.github/workflows/: release.yml
